--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,41 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
+# Node.js
+node_modules/
+package-lock.json
 
-# Eclipse m2e generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
+# Built files
+dist/
+build/
+*.js
+*.js.map
+
+# Logs
+logs
+*.log
+npm-debug.log*
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Environment variables
+.env
+
+# IDEs and editors
+.idea
+.vscode
+*.swp
+*.swo
+*.iml
+
+# Operating system files
+.DS_Store
+Thumbs.db
