--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "floor",
   "version": "0.1.0",
   "description": "Are you getting bored of the same, old server.properties file, and others? Are the standards not YOUR STANDARDS? FloorMC made a solution nobody needed: Floor!",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
@@ -14,5 +13,8 @@
     "@types/node": "^22.15.19",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "minecraft-protocol": "^1.57.0"
   }
 }
